run_log.txt
  File "/home/runner/work/goliath-auto-tool/goliath-auto-tool/main.py", line 65
    if g not in data:
    ^
IndentationError: expected an indented block after 'for' statement on line 64
